# llm-benchmarks

./: .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  requirements.txt
app/: actions.js  layout.js  page.js
app/[slug]/: page.js
app/about/: page.js
app/api/confirm/: route.js
app/api/upvote/: route.js
app/compare/: layout.js  page.js
app/compare/[slugs]/: page.js
app/leaderboard/: page.js
app/login/: page.js
app/prompts/: layout.js  page.js
app/prompts/[slug]/: page.js
app/prompts/new/: page.js
app/prompts/submit/: page.js
components/: CaptchaInput.js  SelectModels.js  UpvoteBtn.js
pages/: [slug].js  _app.js  index.js
pages/model/: [id].js
run/: .gitignore  database.db  pyproject.toml  queriers.py  requirements.txt  run.py  test.py  together_cleaner.py
styles/: globals.css
utils/: db.js  getDB.js
